Proyecto Reconocimiento Facil

--- a/upload.html
+++ b/upload.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Subir Archivo</title>
+        <link rel="stylesheet" type="text/css" href="estilos/estilos.css">
     </head>
     <body>
         <form action="ejemplo.php" method="post" enctype="multipart/form-data">
-            Select image to upload:
-            <input type="file" name="archivo" id="archivo">
-            <input type="submit"  name="boton" value="subir">
+            <h1>Selecciona la imagen que quieras subir</h1>
+            <input type="file" name="archivo" id="archivo" class="boton"> 
+            <input type="submit"  name="boton" value="subir" class="boton">
         </form>
     
     </body>
